@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2ad57cb2d3655bcb8bb83cf4ac14087e50c5b826 ChangeLog
+SHA1 28e18aeab6493fcd15ce9e43d9af62cd39b17029 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 0b74824e90998a352c2313e58f01bce77bf62b27 META.yml
-SHA1 d4f1c5fd3edf2810cbdda3b5ecf99236f552d811 Makefile.PL
+SHA1 69925197564f4f06b32a9bf525839160321c83e2 META.yml
+SHA1 472eb2c952057d600f4ffae4f4f9e0086307e241 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 a6e007f1056d6fb4aa4e9d94707740c364f074a7 bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 36e71b1223ae1397e4720be82371cf4ddf979b5e lib/Net/FullAuto.pm
+SHA1 c1e494d9fc633a707e77f9d0ebe96aa165e9224b lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,11 +54,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSuvTaAAoJEBa/9Pad787EINoIAI6+mYmm1R0WNirfmj1u4p78
-Y1cy9jKmq3/5tJtIG3LMj+XnAbNRNWkWJVmhPuDSWtW0gl4ZFtkKK0hdu1D5SZv7
-0oKLIxn9qq2cXxtZarZnsRPk/gAk5Lz9xURtK79EWAWu9wPXtWBYR/283W2xMUt/
-ZexQlHZPHRjFPYD7rhEfAfZE8Tur+DT7HlgxeZic91L/U7953gSlhHmyipFEsehI
-+eoKCZah/LXlSGmnoNUAGMnvG0hQBuY/eQXuN2XaeQY1I5PSfOkmyw7vUub95mCr
-pw/x5/9mxrSJCZb0Zb5FdKiyF8NwkqpVA6tCMDdBn0kop7kBsqBAinWRM3OBVLo=
-=Ad1j
+iQEcBAEBAgAGBQJSuzjNAAoJEBa/9Pad787EbmoIAMJU6K/1ioKEqkvU+lLEUqy9
+zJj3pp6w4ik843Bc9lW0PIHj1/XfH0NXTelnZKVKb7uPSclhIcEzlUn+LBZCZdrn
+WvH80EDqruFY/L7XN8ZSFZRXOavdu5IqSMJVPvaXkpeYTl0kfLcB1+PWqNkoEfXf
+QoZlY6QFrVldcHWAcgoz+UoPS7SmIho0oYCM7fkqn3IjFJDTu0ARaluy/Mzj3J01
+kRi56jx0FywwkRvSM3ViAISdKelFTskQNqI042vzMQ+eyeU9JdxJ+jc2HMkLy3jR
+4TLy5JGEa7qF9/96jLpSdt/HbcNohKO29bgCiMo5CUstnlV6CvoxZomn63g4a+U=
+=4MYy
 -----END PGP SIGNATURE-----
